CompiladorMJ/src/MJ/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Grammar

Rule 1     S' -> PROGRAM
Rule 2     PROGRAM -> LISTACLASES
Rule 3     LISTACLASES -> CLASESIMPLE LISTACLASES
Rule 4     LISTACLASES -> CLASEEXTENDS LISTACLASES
Rule 5     LISTACLASES -> empty
Rule 6     CLASESIMPLE -> CLASS ID { CAMPOMETODO }
Rule 7     CLASEEXTENDS -> CLASS ID EXTENDS ID { CAMPOMETODO }
Rule 8     CAMPOMETODO -> FIELD CAMPOMETODO
Rule 9     CAMPOMETODO -> METHOD CAMPOMETODO
Rule 10    CAMPOMETODO -> empty
Rule 11    FIELD -> TYPE ID CAMPOS ;
Rule 12    CAMPOS -> , ID CAMPOS
Rule 13    CAMPOS -> empty
Rule 14    METHOD -> STATIC TYPE ID ( FORMALES ) BLOQUE
Rule 15    METHOD -> STATIC VOID ID ( FORMALES ) BLOQUE
Rule 16    METHOD -> TYPE ID ( FORMALES ) BLOQUE
Rule 17    METHOD -> VOID ID ( FORMALES ) BLOQUE
Rule 18    FORMALES -> TYPE ID MASFORMALES
Rule 19    FORMALES -> empty
Rule 20    MASFORMALES -> , TYPE ID MASFORMALES
Rule 21    MASFORMALES -> empty
Rule 22    TYPE -> INT
Rule 23    TYPE -> BOOLEAN
Rule 24    TYPE -> STRING
Rule 25    TYPE -> ID
Rule 26    TYPE -> TYPE BRACKETS
Rule 27    BLOQUE -> { DECLARACION }
Rule 28    DECLARACION -> STMT DECLARACION
Rule 29    DECLARACION -> empty
Rule 30    STMT -> ID . ID ( EXPRESIONCOMA ) ;
Rule 31    STMT -> ID . ID ( ) ;
Rule 32    STMT -> EXPR . ID ( EXPRESIONCOMA ) ;
Rule 33    STMT -> EXPR . ID ( ) ;
Rule 34    STMT -> ID ( EXPRESIONCOMA ) ;
Rule 35    STMT -> ID ( ) ;
Rule 36    STMT -> LOCATION = EXPR ;
Rule 37    STMT -> RETURN ;
Rule 38    STMT -> RETURN EXPR ;
Rule 39    STMT -> IF ( EXPR ) STMT ELSE STMT
Rule 40    STMT -> IF ( EXPR ) STMT
Rule 41    STMT -> WHILE ( EXPR ) STMT
Rule 42    STMT -> BREAK ;
Rule 43    STMT -> CONTINUE ;
Rule 44    STMT -> BLOQUE
Rule 45    STMT -> TYPE ID = EXPR ;
Rule 46    STMT -> TYPE ID ;
Rule 47    EXPR -> ID . ID ( EXPRESIONCOMA )
Rule 48    EXPR -> ID . ID ( )
Rule 49    EXPR -> EXPR . ID ( EXPRESIONCOMA )
Rule 50    EXPR -> EXPR . ID ( )
Rule 51    EXPR -> ID ( EXPRESIONCOMA )
Rule 52    EXPR -> ID ( )
Rule 53    EXPR -> LOCATION
Rule 54    EXPR -> THIS
Rule 55    EXPR -> NEW ID ( )
Rule 56    EXPR -> NEW TYPE [ EXPR ]
Rule 57    EXPR -> EXPR . LENGTH
Rule 58    EXPR -> ID . LENGTH
Rule 59    EXPR -> EXPR + EXPR
Rule 60    EXPR -> EXPR - EXPR
Rule 61    EXPR -> EXPR * EXPR
Rule 62    EXPR -> EXPR / EXPR
Rule 63    EXPR -> EXPR % EXPR
Rule 64    EXPR -> EXPR AND EXPR
Rule 65    EXPR -> EXPR OR EXPR
Rule 66    EXPR -> EXPR < EXPR
Rule 67    EXPR -> EXPR MENOROIGUAL EXPR
Rule 68    EXPR -> EXPR > EXPR
Rule 69    EXPR -> EXPR MAYOROIGUAL EXPR
Rule 70    EXPR -> EXPR IGUAL EXPR
Rule 71    EXPR -> EXPR DIFERENTE EXPR
Rule 72    EXPR -> - EXPR
Rule 73    EXPR -> ! EXPR
Rule 74    EXPR -> LITERAL
Rule 75    EXPR -> ( EXPR )
Rule 76    EXPRESIONCOMA -> EXPR EXPRESIONCOMAP
Rule 77    EXPRESIONCOMAP -> , EXPR EXPRESIONCOMAP
Rule 78    EXPRESIONCOMAP -> empty
Rule 79    LOCATION -> ID
Rule 80    LOCATION -> EXPR . ID
Rule 81    LOCATION -> EXPR [ EXPR ]
Rule 82    LITERAL -> NUMERO
Rule 83    LITERAL -> STRINGID
Rule 84    LITERAL -> TRUE
Rule 85    LITERAL -> FALSE
Rule 86    LITERAL -> NULL
Rule 87    empty -> <empty>

Terminals, with rules where they appear

!                    : 72
%                    : 62
(                    : 13 14 15 16 29 30 31 32 33 34 38 39 40 46 47 48 49 50 51 54 74
)                    : 13 14 15 16 29 30 31 32 33 34 38 39 40 46 47 48 49 50 51 54 74
*                    : 60
+                    : 58
,                    : 11 19 76
-                    : 59 71
.                    : 29 30 31 32 46 47 48 49 56 57 79
/                    : 61
;                    : 10 29 30 31 32 33 34 35 36 37 41 42 44 45
<                    : 65
=                    : 35 44
>                    : 67
AND                  : 63
BOOLEAN              : 22
BRACKETS             : 25
BREAK                : 41
CLASS                : 5 6
CONTINUE             : 42
DIFERENTE            : 70
ELSE                 : 38
EXTENDS              : 6
FALSE                : 84
ID                   : 5 6 6 10 11 13 14 15 16 17 19 24 29 29 30 30 31 32 33 34 44 45 46 46 47 47 48 49 50 51 54 57 78 79
IF                   : 38 39
IGUAL                : 69
INT                  : 21
LENGTH               : 56 57
MAYOROIGUAL          : 68
MENOROIGUAL          : 66
NEW                  : 54 55
NULL                 : 85
NUMERO               : 81
OR                   : 64
RETURN               : 36 37
STATIC               : 13 14
STRING               : 23
STRINGID             : 82
THIS                 : 53
TRUE                 : 83
VOID                 : 14 16
WHILE                : 40
[                    : 55 80
]                    : 55 80
error                : 
{                    : 5 6 26
}                    : 5 6 26

Nonterminals, with rules where they appear

BLOQUE               : 13 14 15 16 43
CAMPOMETODO          : 5 6 7 8
CAMPOS               : 10 11
CLASEEXTENDS         : 3
CLASESIMPLE          : 2
DECLARACION          : 26 27
EXPR                 : 31 32 35 37 38 39 40 44 48 49 55 56 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72 74 75 76 79 80 80
EXPRESIONCOMA        : 29 31 33 46 48 50
EXPRESIONCOMAP       : 75 76
FIELD                : 7
FORMALES             : 13 14 15 16
LISTACLASES          : 1 2 3
LITERAL              : 73
LOCATION             : 35 52
MASFORMALES          : 17 19
METHOD               : 8
PROGRAM              : 0
STMT                 : 27 38 38 39 40
TYPE                 : 10 13 15 17 19 25 44 45 55
empty                : 4 9 12 18 20 28 77

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . LISTACLASES
    (2) LISTACLASES -> . CLASESIMPLE LISTACLASES
    (3) LISTACLASES -> . CLASEEXTENDS LISTACLASES
    (4) LISTACLASES -> . empty
    (5) CLASESIMPLE -> . CLASS ID { CAMPOMETODO }
    (6) CLASEEXTENDS -> . CLASS ID EXTENDS ID { CAMPOMETODO }
    (86) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 86 (empty -> .)

    LISTACLASES                    shift and go to state 1
    CLASESIMPLE                    shift and go to state 2
    PROGRAM                        shift and go to state 3
    CLASEEXTENDS                   shift and go to state 4
    empty                          shift and go to state 6

state 1

    (1) PROGRAM -> LISTACLASES .

    $end            reduce using rule 1 (PROGRAM -> LISTACLASES .)


state 2

    (2) LISTACLASES -> CLASESIMPLE . LISTACLASES
    (2) LISTACLASES -> . CLASESIMPLE LISTACLASES
    (3) LISTACLASES -> . CLASEEXTENDS LISTACLASES
    (4) LISTACLASES -> . empty
    (5) CLASESIMPLE -> . CLASS ID { CAMPOMETODO }
    (6) CLASEEXTENDS -> . CLASS ID EXTENDS ID { CAMPOMETODO }
    (86) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 86 (empty -> .)

    CLASEEXTENDS                   shift and go to state 4
    CLASESIMPLE                    shift and go to state 2
    LISTACLASES                    shift and go to state 7
    empty                          shift and go to state 6

state 3

    (0) S' -> PROGRAM .



state 4

    (3) LISTACLASES -> CLASEEXTENDS . LISTACLASES
    (2) LISTACLASES -> . CLASESIMPLE LISTACLASES
    (3) LISTACLASES -> . CLASEEXTENDS LISTACLASES
    (4) LISTACLASES -> . empty
    (5) CLASESIMPLE -> . CLASS ID { CAMPOMETODO }
    (6) CLASEEXTENDS -> . CLASS ID EXTENDS ID { CAMPOMETODO }
    (86) empty -> .

    CLASS           shift and go to state 5
    $end            reduce using rule 86 (empty -> .)

    CLASEEXTENDS                   shift and go to state 4
    LISTACLASES                    shift and go to state 8
    CLASESIMPLE                    shift and go to state 2
    empty                          shift and go to state 6

state 5

    (5) CLASESIMPLE -> CLASS . ID { CAMPOMETODO }
    (6) CLASEEXTENDS -> CLASS . ID EXTENDS ID { CAMPOMETODO }

    ID              shift and go to state 9


state 6

    (4) LISTACLASES -> empty .

    $end            reduce using rule 4 (LISTACLASES -> empty .)


state 7

    (2) LISTACLASES -> CLASESIMPLE LISTACLASES .

    $end            reduce using rule 2 (LISTACLASES -> CLASESIMPLE LISTACLASES .)


state 8

    (3) LISTACLASES -> CLASEEXTENDS LISTACLASES .

    $end            reduce using rule 3 (LISTACLASES -> CLASEEXTENDS LISTACLASES .)


state 9

    (5) CLASESIMPLE -> CLASS ID . { CAMPOMETODO }
    (6) CLASEEXTENDS -> CLASS ID . EXTENDS ID { CAMPOMETODO }

    {               shift and go to state 11
    EXTENDS         shift and go to state 10


state 10

    (6) CLASEEXTENDS -> CLASS ID EXTENDS . ID { CAMPOMETODO }

    ID              shift and go to state 12


state 11

    (5) CLASESIMPLE -> CLASS ID { . CAMPOMETODO }
    (7) CAMPOMETODO -> . FIELD CAMPOMETODO
    (8) CAMPOMETODO -> . METHOD CAMPOMETODO
    (9) CAMPOMETODO -> . empty
    (10) FIELD -> . TYPE ID CAMPOS ;
    (13) METHOD -> . STATIC TYPE ID ( FORMALES ) BLOQUE
    (14) METHOD -> . STATIC VOID ID ( FORMALES ) BLOQUE
    (15) METHOD -> . TYPE ID ( FORMALES ) BLOQUE
    (16) METHOD -> . VOID ID ( FORMALES ) BLOQUE
    (86) empty -> .
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    STATIC          shift and go to state 19
    VOID            shift and go to state 15
    }               reduce using rule 86 (empty -> .)
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    FIELD                          shift and go to state 18
    CAMPOMETODO                    shift and go to state 20
    TYPE                           shift and go to state 14
    METHOD                         shift and go to state 16
    empty                          shift and go to state 23

state 12

    (6) CLASEEXTENDS -> CLASS ID EXTENDS ID . { CAMPOMETODO }

    {               shift and go to state 24


state 13

    (23) TYPE -> STRING .

    ID              reduce using rule 23 (TYPE -> STRING .)
    BRACKETS        reduce using rule 23 (TYPE -> STRING .)
    [               reduce using rule 23 (TYPE -> STRING .)


state 14

    (10) FIELD -> TYPE . ID CAMPOS ;
    (15) METHOD -> TYPE . ID ( FORMALES ) BLOQUE
    (25) TYPE -> TYPE . BRACKETS

    ID              shift and go to state 26
    BRACKETS        shift and go to state 25


state 15

    (16) METHOD -> VOID . ID ( FORMALES ) BLOQUE

    ID              shift and go to state 27


state 16

    (8) CAMPOMETODO -> METHOD . CAMPOMETODO
    (7) CAMPOMETODO -> . FIELD CAMPOMETODO
    (8) CAMPOMETODO -> . METHOD CAMPOMETODO
    (9) CAMPOMETODO -> . empty
    (10) FIELD -> . TYPE ID CAMPOS ;
    (13) METHOD -> . STATIC TYPE ID ( FORMALES ) BLOQUE
    (14) METHOD -> . STATIC VOID ID ( FORMALES ) BLOQUE
    (15) METHOD -> . TYPE ID ( FORMALES ) BLOQUE
    (16) METHOD -> . VOID ID ( FORMALES ) BLOQUE
    (86) empty -> .
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    STATIC          shift and go to state 19
    VOID            shift and go to state 15
    }               reduce using rule 86 (empty -> .)
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    FIELD                          shift and go to state 18
    CAMPOMETODO                    shift and go to state 28
    TYPE                           shift and go to state 14
    METHOD                         shift and go to state 16
    empty                          shift and go to state 23

state 17

    (24) TYPE -> ID .

    ID              reduce using rule 24 (TYPE -> ID .)
    BRACKETS        reduce using rule 24 (TYPE -> ID .)


state 18

    (7) CAMPOMETODO -> FIELD . CAMPOMETODO
    (7) CAMPOMETODO -> . FIELD CAMPOMETODO
    (8) CAMPOMETODO -> . METHOD CAMPOMETODO
    (9) CAMPOMETODO -> . empty
    (10) FIELD -> . TYPE ID CAMPOS ;
    (13) METHOD -> . STATIC TYPE ID ( FORMALES ) BLOQUE
    (14) METHOD -> . STATIC VOID ID ( FORMALES ) BLOQUE
    (15) METHOD -> . TYPE ID ( FORMALES ) BLOQUE
    (16) METHOD -> . VOID ID ( FORMALES ) BLOQUE
    (86) empty -> .
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    STATIC          shift and go to state 19
    VOID            shift and go to state 15
    }               reduce using rule 86 (empty -> .)
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    FIELD                          shift and go to state 18
    CAMPOMETODO                    shift and go to state 29
    TYPE                           shift and go to state 14
    METHOD                         shift and go to state 16
    empty                          shift and go to state 23

state 19

    (13) METHOD -> STATIC . TYPE ID ( FORMALES ) BLOQUE
    (14) METHOD -> STATIC . VOID ID ( FORMALES ) BLOQUE
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    VOID            shift and go to state 30
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    TYPE                           shift and go to state 31

state 20

    (5) CLASESIMPLE -> CLASS ID { CAMPOMETODO . }

    }               shift and go to state 32


state 21

    (22) TYPE -> BOOLEAN .

    ID              reduce using rule 22 (TYPE -> BOOLEAN .)
    BRACKETS        reduce using rule 22 (TYPE -> BOOLEAN .)
    [               reduce using rule 22 (TYPE -> BOOLEAN .)


state 22

    (21) TYPE -> INT .

    ID              reduce using rule 21 (TYPE -> INT .)
    BRACKETS        reduce using rule 21 (TYPE -> INT .)
    [               reduce using rule 21 (TYPE -> INT .)


state 23

    (9) CAMPOMETODO -> empty .

    }               reduce using rule 9 (CAMPOMETODO -> empty .)


state 24

    (6) CLASEEXTENDS -> CLASS ID EXTENDS ID { . CAMPOMETODO }
    (7) CAMPOMETODO -> . FIELD CAMPOMETODO
    (8) CAMPOMETODO -> . METHOD CAMPOMETODO
    (9) CAMPOMETODO -> . empty
    (10) FIELD -> . TYPE ID CAMPOS ;
    (13) METHOD -> . STATIC TYPE ID ( FORMALES ) BLOQUE
    (14) METHOD -> . STATIC VOID ID ( FORMALES ) BLOQUE
    (15) METHOD -> . TYPE ID ( FORMALES ) BLOQUE
    (16) METHOD -> . VOID ID ( FORMALES ) BLOQUE
    (86) empty -> .
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    STATIC          shift and go to state 19
    VOID            shift and go to state 15
    }               reduce using rule 86 (empty -> .)
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    FIELD                          shift and go to state 18
    CAMPOMETODO                    shift and go to state 33
    TYPE                           shift and go to state 14
    METHOD                         shift and go to state 16
    empty                          shift and go to state 23

state 25

    (25) TYPE -> TYPE BRACKETS .

    ID              reduce using rule 25 (TYPE -> TYPE BRACKETS .)
    BRACKETS        reduce using rule 25 (TYPE -> TYPE BRACKETS .)
    [               reduce using rule 25 (TYPE -> TYPE BRACKETS .)


state 26

    (10) FIELD -> TYPE ID . CAMPOS ;
    (15) METHOD -> TYPE ID . ( FORMALES ) BLOQUE
    (11) CAMPOS -> . , ID CAMPOS
    (12) CAMPOS -> . empty
    (86) empty -> .

    (               shift and go to state 34
    ,               shift and go to state 35
    ;               reduce using rule 86 (empty -> .)

    CAMPOS                         shift and go to state 36
    empty                          shift and go to state 37

state 27

    (16) METHOD -> VOID ID . ( FORMALES ) BLOQUE

    (               shift and go to state 38


state 28

    (8) CAMPOMETODO -> METHOD CAMPOMETODO .

    }               reduce using rule 8 (CAMPOMETODO -> METHOD CAMPOMETODO .)


state 29

    (7) CAMPOMETODO -> FIELD CAMPOMETODO .

    }               reduce using rule 7 (CAMPOMETODO -> FIELD CAMPOMETODO .)


state 30

    (14) METHOD -> STATIC VOID . ID ( FORMALES ) BLOQUE

    ID              shift and go to state 39


state 31

    (13) METHOD -> STATIC TYPE . ID ( FORMALES ) BLOQUE
    (25) TYPE -> TYPE . BRACKETS

    ID              shift and go to state 40
    BRACKETS        shift and go to state 25


state 32

    (5) CLASESIMPLE -> CLASS ID { CAMPOMETODO } .

    CLASS           reduce using rule 5 (CLASESIMPLE -> CLASS ID { CAMPOMETODO } .)
    $end            reduce using rule 5 (CLASESIMPLE -> CLASS ID { CAMPOMETODO } .)


state 33

    (6) CLASEEXTENDS -> CLASS ID EXTENDS ID { CAMPOMETODO . }

    }               shift and go to state 41


state 34

    (15) METHOD -> TYPE ID ( . FORMALES ) BLOQUE
    (17) FORMALES -> . TYPE ID MASFORMALES
    (18) FORMALES -> . empty
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS
    (86) empty -> .

    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17
    )               reduce using rule 86 (empty -> .)

    FORMALES                       shift and go to state 42
    TYPE                           shift and go to state 43
    empty                          shift and go to state 44

state 35

    (11) CAMPOS -> , . ID CAMPOS

    ID              shift and go to state 45


state 36

    (10) FIELD -> TYPE ID CAMPOS . ;

    ;               shift and go to state 46


state 37

    (12) CAMPOS -> empty .

    ;               reduce using rule 12 (CAMPOS -> empty .)


state 38

    (16) METHOD -> VOID ID ( . FORMALES ) BLOQUE
    (17) FORMALES -> . TYPE ID MASFORMALES
    (18) FORMALES -> . empty
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS
    (86) empty -> .

    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17
    )               reduce using rule 86 (empty -> .)

    FORMALES                       shift and go to state 47
    TYPE                           shift and go to state 43
    empty                          shift and go to state 44

state 39

    (14) METHOD -> STATIC VOID ID . ( FORMALES ) BLOQUE

    (               shift and go to state 48


state 40

    (13) METHOD -> STATIC TYPE ID . ( FORMALES ) BLOQUE

    (               shift and go to state 49


state 41

    (6) CLASEEXTENDS -> CLASS ID EXTENDS ID { CAMPOMETODO } .

    CLASS           reduce using rule 6 (CLASEEXTENDS -> CLASS ID EXTENDS ID { CAMPOMETODO } .)
    $end            reduce using rule 6 (CLASEEXTENDS -> CLASS ID EXTENDS ID { CAMPOMETODO } .)


state 42

    (15) METHOD -> TYPE ID ( FORMALES . ) BLOQUE

    )               shift and go to state 50


state 43

    (17) FORMALES -> TYPE . ID MASFORMALES
    (25) TYPE -> TYPE . BRACKETS

    ID              shift and go to state 51
    BRACKETS        shift and go to state 25


state 44

    (18) FORMALES -> empty .

    )               reduce using rule 18 (FORMALES -> empty .)


state 45

    (11) CAMPOS -> , ID . CAMPOS
    (11) CAMPOS -> . , ID CAMPOS
    (12) CAMPOS -> . empty
    (86) empty -> .

    ,               shift and go to state 35
    ;               reduce using rule 86 (empty -> .)

    CAMPOS                         shift and go to state 52
    empty                          shift and go to state 37

state 46

    (10) FIELD -> TYPE ID CAMPOS ; .

    STATIC          reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    VOID            reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    INT             reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    BOOLEAN         reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    STRING          reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    ID              reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)
    }               reduce using rule 10 (FIELD -> TYPE ID CAMPOS ; .)


state 47

    (16) METHOD -> VOID ID ( FORMALES . ) BLOQUE

    )               shift and go to state 53


state 48

    (14) METHOD -> STATIC VOID ID ( . FORMALES ) BLOQUE
    (17) FORMALES -> . TYPE ID MASFORMALES
    (18) FORMALES -> . empty
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS
    (86) empty -> .

    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17
    )               reduce using rule 86 (empty -> .)

    FORMALES                       shift and go to state 54
    TYPE                           shift and go to state 43
    empty                          shift and go to state 44

state 49

    (13) METHOD -> STATIC TYPE ID ( . FORMALES ) BLOQUE
    (17) FORMALES -> . TYPE ID MASFORMALES
    (18) FORMALES -> . empty
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS
    (86) empty -> .

    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17
    )               reduce using rule 86 (empty -> .)

    FORMALES                       shift and go to state 55
    TYPE                           shift and go to state 43
    empty                          shift and go to state 44

state 50

    (15) METHOD -> TYPE ID ( FORMALES ) . BLOQUE
    (26) BLOQUE -> . { DECLARACION }

    {               shift and go to state 56

    BLOQUE                         shift and go to state 57

state 51

    (17) FORMALES -> TYPE ID . MASFORMALES
    (19) MASFORMALES -> . , TYPE ID MASFORMALES
    (20) MASFORMALES -> . empty
    (86) empty -> .

    ,               shift and go to state 60
    )               reduce using rule 86 (empty -> .)

    MASFORMALES                    shift and go to state 58
    empty                          shift and go to state 59

state 52

    (11) CAMPOS -> , ID CAMPOS .

    ;               reduce using rule 11 (CAMPOS -> , ID CAMPOS .)


state 53

    (16) METHOD -> VOID ID ( FORMALES ) . BLOQUE
    (26) BLOQUE -> . { DECLARACION }

    {               shift and go to state 56

    BLOQUE                         shift and go to state 61

state 54

    (14) METHOD -> STATIC VOID ID ( FORMALES . ) BLOQUE

    )               shift and go to state 62


state 55

    (13) METHOD -> STATIC TYPE ID ( FORMALES . ) BLOQUE

    )               shift and go to state 63


state 56

    (26) BLOQUE -> { . DECLARACION }
    (27) DECLARACION -> . STMT DECLARACION
    (28) DECLARACION -> . empty
    (29) STMT -> . ID . ID ( EXPRESIONCOMA ) ;
    (30) STMT -> . ID . ID ( ) ;
    (31) STMT -> . EXPR . ID ( EXPRESIONCOMA ) ;
    (32) STMT -> . EXPR . ID ( ) ;
    (33) STMT -> . ID ( EXPRESIONCOMA ) ;
    (34) STMT -> . ID ( ) ;
    (35) STMT -> . LOCATION = EXPR ;
    (36) STMT -> . RETURN ;
    (37) STMT -> . RETURN EXPR ;
    (38) STMT -> . IF ( EXPR ) STMT ELSE STMT
    (39) STMT -> . IF ( EXPR ) STMT
    (40) STMT -> . WHILE ( EXPR ) STMT
    (41) STMT -> . BREAK ;
    (42) STMT -> . CONTINUE ;
    (43) STMT -> . BLOQUE
    (44) STMT -> . TYPE ID = EXPR ;
    (45) STMT -> . TYPE ID ;
    (86) empty -> .
    (46) EXPR -> . ID . ID ( EXPRESIONCOMA )
    (47) EXPR -> . ID . ID ( )
    (48) EXPR -> . EXPR . ID ( EXPRESIONCOMA )
    (49) EXPR -> . EXPR . ID ( )
    (50) EXPR -> . ID ( EXPRESIONCOMA )
    (51) EXPR -> . ID ( )
    (52) EXPR -> . LOCATION
    (53) EXPR -> . THIS
    (54) EXPR -> . NEW ID ( )
    (55) EXPR -> . NEW TYPE [ EXPR ]
    (56) EXPR -> . EXPR . LENGTH
    (57) EXPR -> . ID . LENGTH
    (58) EXPR -> . EXPR + EXPR
    (59) EXPR -> . EXPR - EXPR
    (60) EXPR -> . EXPR * EXPR
    (61) EXPR -> . EXPR / EXPR
    (62) EXPR -> . EXPR % EXPR
    (63) EXPR -> . EXPR AND EXPR
    (64) EXPR -> . EXPR OR EXPR
    (65) EXPR -> . EXPR < EXPR
    (66) EXPR -> . EXPR MENOROIGUAL EXPR
    (67) EXPR -> . EXPR > EXPR
    (68) EXPR -> . EXPR MAYOROIGUAL EXPR
    (69) EXPR -> . EXPR IGUAL EXPR
    (70) EXPR -> . EXPR DIFERENTE EXPR
    (71) EXPR -> . - EXPR
    (72) EXPR -> . ! EXPR
    (73) EXPR -> . LITERAL
    (74) EXPR -> . ( EXPR )
    (78) LOCATION -> . ID
    (79) LOCATION -> . EXPR . ID
    (80) LOCATION -> . EXPR [ EXPR ]
    (26) BLOQUE -> . { DECLARACION }
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS
    (81) LITERAL -> . NUMERO
    (82) LITERAL -> . STRINGID
    (83) LITERAL -> . TRUE
    (84) LITERAL -> . FALSE
    (85) LITERAL -> . NULL

    ID              shift and go to state 79
    RETURN          shift and go to state 68
    IF              shift and go to state 81
    WHILE           shift and go to state 66
    BREAK           shift and go to state 84
    CONTINUE        shift and go to state 85
    }               reduce using rule 86 (empty -> .)
    THIS            shift and go to state 83
    NEW             shift and go to state 67
    -               shift and go to state 73
    !               shift and go to state 70
    (               shift and go to state 72
    {               shift and go to state 56
    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    NUMERO          shift and go to state 76
    STRINGID        shift and go to state 64
    TRUE            shift and go to state 69
    FALSE           shift and go to state 82
    NULL            shift and go to state 71

    EXPR                           shift and go to state 86
    STMT                           shift and go to state 65
    LITERAL                        shift and go to state 77
    DECLARACION                    shift and go to state 80
    BLOQUE                         shift and go to state 78
    TYPE                           shift and go to state 87
    empty                          shift and go to state 75
    LOCATION                       shift and go to state 74

state 57

    (15) METHOD -> TYPE ID ( FORMALES ) BLOQUE .

    STATIC          reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    VOID            reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    INT             reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    BOOLEAN         reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    STRING          reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    ID              reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)
    }               reduce using rule 15 (METHOD -> TYPE ID ( FORMALES ) BLOQUE .)


state 58

    (17) FORMALES -> TYPE ID MASFORMALES .

    )               reduce using rule 17 (FORMALES -> TYPE ID MASFORMALES .)


state 59

    (20) MASFORMALES -> empty .

    )               reduce using rule 20 (MASFORMALES -> empty .)


state 60

    (19) MASFORMALES -> , . TYPE ID MASFORMALES
    (21) TYPE -> . INT
    (22) TYPE -> . BOOLEAN
    (23) TYPE -> . STRING
    (24) TYPE -> . ID
    (25) TYPE -> . TYPE BRACKETS

    INT             shift and go to state 22
    BOOLEAN         shift and go to state 21
    STRING          shift and go to state 13
    ID              shift and go to state 17

    TYPE                           shift and go to state 88

state 61

    (16) METHOD -> VOID ID ( FORMALES ) BLOQUE .

    STATIC          reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    VOID            reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    INT             reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    BOOLEAN         reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    STRING          reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    ID              reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)
    }               reduce using rule 16 (METHOD -> VOID ID ( FORMALES ) BLOQUE .)


state 62

    (14) METHOD -> STATIC VOID ID ( FORMALES ) . BLOQUE
    (26) BLOQUE -> . { DECLARACION }

    {               shift and go to state 56

    BLOQUE                         shift and go to state 89

state 63

    (13) METHOD -> STATIC TYPE ID ( FORMALES ) . BLOQUE
    (26) BLOQUE -> . { DECLARACION }

    {               shift and go to state 56

    BLOQUE                         shift and go to state 90

state 64

    (82) LITERAL -> STRINGID .

